<resources>
    <string name="app_name">PixAura</string>
    <string name="email">Email</string>
    <string name="your_email_id">Your email id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_pixaura">Welcome to PixAura</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="empty" />
    <string name="category">Category</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="_4k_wallapers">- 4K Wallapers</string>
    <string name="settings">Settings</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="wallpaper_image">Wallpaper image</string>
    <string name="search_wallpapers">Search wallpapers...</string>
    <string name="username">UserName</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="my_account">My Account</string>
    <string name="favorites">Favorites</string>
    <string name="downloads">Downloads</string>
    <string name="logout">Logout</string>
    <string name="use_own_wallpaper">Use Own Wallpaper</string>
    <string name="no_results_found">No results found</string>
    <string name="category_wallpapers">Category Wallpapers</string>
    <string name="set_a_wallpaper">Set a WallPaper</string>
    <string name="set_a_home_screen">Set a home screen</string>
    <string name="set_as_both">Set as Both</string>
    <string name="set_a_lock_screen">Set a lock screen</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_logo">app logo</string>
    <string name="save">Save</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="navigate_title">Navigate Title</string>
    <string name="go">go</string>
    <string name="header">Header</string>
    <string name="show_password">show password</string>
    <string name="gallery">Gallery</string>
    <string name="downloaded_image">downloaded_image</string>

</resources>