<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountRootLayout"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".ui.view.accountScreen.AccountFragment">

    <!-- Top Bar -->
    <include
        android:id="@+id/profileTopBar"
        layout="@layout/fragment_profile_top_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- CardView for Profile Info -->
    <androidx.cardview.widget.CardView
        android:id="@+id/userInfoCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="#6375DF"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/profileTopBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/userInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xyz_gmail_com"
                android:textSize="16sp"
                android:textColor="@color/dark_gray"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView for Options -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoCard">

        <LinearLayout
            android:id="@+id/settingsListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:showDividers="middle"
            android:divider="@android:color/darker_gray"
            android:dividerPadding="8dp">

            <!-- My Account -->
            <LinearLayout
                android:id="@+id/myAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/round_account_circle_24"
                    android:contentDescription="@string/my_account"
                    app:tint="@color/black" />

                <TextView
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_account"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Download -->
            <LinearLayout
                android:id="@+id/download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_download_24"
                    android:contentDescription="@string/downloads"
                    app:tint="@color/black" />

                <TextView
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/downloads"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- use own -->
            <LinearLayout
                android:id="@+id/useOwnWallpaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/outline_wallpaper"
                    android:contentDescription="@string/downloads"
                    app:tint="@color/black" />

                <TextView
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Settings -->
            <LinearLayout
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_settings_24"
                    android:contentDescription="@string/settings"
                    app:tint="@color/black" />

                <TextView
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Logout -->
            <LinearLayout
                android:id="@+id/logOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_logout_24"
                    android:contentDescription="@string/logout"
                    app:tint="@color/red" />

                <TextView
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textSize="16sp"
                    android:textColor="@color/red" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
